# dsrp-machine-learning-engineering-20261

./: .gitignore  README.md  pyproject.toml
modulo-1-aprendizaje-supervisado/: 02_regresion_lineal.ipynb  03_arboles_decision_regresion.ipynb  04_clasificacion_regresion_logistica.ipynb  05_arboles_decision_clasificacion.ipynb
modulo-2-aprendizaje-no-supervisado/: 01_introduccion_aprendizaje_no_supervisado.ipynb  02_clustering_kmeans_jerarquico.ipynb  03_reduccion_dimensionalidad_pca.ipynb  04_reglas_asociacion.ipynb  reglas_asociacion.csv
modulo-3-introduccion-ai-engineering/: 01_introduccion_llms_y_genai.ipynb  02_apis_openai_huggingface.ipynb  03_prompt_engineering_y_tokenizacion.ipynb  04_alternativas_ollama_y_gemini.ipynb  05_aplicacion_langchain.ipynb  06_llm_vs_modelos_clasicos.ipynb
