[project]
name = "dsrp-ml-engineering"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.3",
    "graphviz>=0.21",
    "huggingface-hub>=0.26.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.7",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.5",
    "langchain-openai>=0.2.6",
    "langchain-text-splitters>=0.3.2",
    "matplotlib>=3.10.9",
    "mlxtend>=0.23.4",
    "numpy>=2.4.4",
    "ollama>=0.4.0",
    "openai>=1.55.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tiktoken>=0.8.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
